--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">RPG Note</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_database_name">rpg_app_db</string>
+    <string name="shop_database_name">rpg_shop_db</string>
+    <string name="task_database_name">rpg_task_db</string>
 </resources>
